created user register route.
