# src/backend/routes/userRoute.ts
@@ -2,6 +2,9 @@ import { Router } from "jsr:@oak/oak";
 
 const router = new Router();
 
+router.post("/register", async (ctx) => {
+  ctx.response.body = `user registered`;
+});
 router.get("/", async (context) => {
   context.response.body = "user route";
 });
