# src/backend/swagger.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: daily-dash
   description: daily-dash is a todo list application. this is ia api specs for the application.
@@ -12,6 +12,44 @@ paths:
       responses:
         200:
           description: response came back
+
+  /user/register:
+    post:
+      summary: Create a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mobileNumber:
+                  type: number
+                password:
+                  type: string
+                username:
+                  type: string
+      responses:
+        200:
+          description: Successfully Created User
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  username:
+                    type: string
+          headers:
+            Set-Cookie:
+              description: return JWT Token
+              schema:
+                type: string
+
+
+
+
 
 
 #    post:
